# co-citation-assist

./: .gitignore  LICENSE  README.md  fix_unicode_json.py  network_co_citation.json  pyproject.toml
co_citation_assist/: __init__.py  analyzer.py  cli.py  network_cli.py  network_generator.py  ris_parser.py  utils.py
co_citation_assist/apis/: __init__.py  base.py  composite.py  openalex.py  semantic_scholar.py
output/: backward.csv  detailed_references_citations.json  forward.csv  network_amsler.json  network_bibliographic_coupling.json  network_co_citation.json  summary.csv
testing/: displacement-mnr.ris  sample_mag_test.ris  tiab_screening_results.ris  vosgraph_sample.json
